k/traefik/traefik.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: traefik
  namespace: traefik
  annotations:
    kuma.io/sidecar-injection: enabled
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  labels:
    app: traefik
  annotations:
    metallb.universe.tf/address-pool: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
  - port: 80
    name: traefik
    targetPort: traefik
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-proxy
  labels:
    app: traefik-proxy
  annotations:
    metallb.universe.tf/address-pool: traefik-proxy
    external-dns.alpha.kubernetes.io/hostname: traefik.katt.defn.jp
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
  - port: 80
    name: http
    targetPort: http
  - port: 443
    name: https
    targetPort: https
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      annotations:
        kuma.io/gateway: enabled
      labels:
        app: traefik
    spec:
      nodeSelector:
        index: "0"
      tolerations:
        - key: "node-role.kubernetes.io/master"
          operator: "Equal"
          effect: "NoSchedule"

      serviceAccountName: traefik
      terminationGracePeriodSeconds: 60
      hostNetwork: false
      volumes:
        - name: traefik-config
          configMap:
            name: traefik-config
      containers:
      - image: traefik:2.2.11
        name: traefik
        resources:
        ports:
        - name: "http"
          containerPort: 80
          protocol: TCP
          hostPort: 80
        - name: "https"
          containerPort: 443
          protocol: TCP
          hostPort: 443
        - name: "traefik"
          containerPort: 8080
          protocol: TCP
        volumeMounts:
          - name: traefik-config
            mountPath: /etc/traefik
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: traefik
  labels:
    app: traefik
spec:
  entryPoints:
    - http
    - https
  routes:
  - match: HostRegexp(`traefik.{domain:.+}`)
    kind: Rule
    services:
    - name: traefik
      port: 80
    middlewares:
      - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: false
    port: "443"
